@@ -3,8 +3,10 @@
 	* jartool.c (list_jar, extract_jar, init_args, 
 	get_next_arg): Added const qualifier to char ** 
 	parameter and return types.
-	(main) Changed type of new_argv to const char **.
-	Modified malloc cast accordingly. Fixed 
+	(main) Added const qualifier to type of new_argv.
+	Modified malloc cast accordingly. Fixed cast of
+	const char * to char *.
+	(args_g) Added const qualifier to type.
 
 2007-02-06  Dalibor Topic  <robilad@kaffe.org>
 
